# VibeFairy

./: .env.example  .gitignore  README.md  claudefairy.toml.example  launcher.py  pyproject.toml  vibefairy.toml.example  启动ClaudeFairy.bat  启动VibeFairy.bat
docs/design/: 2026-03-05-hydramind-v2-architecture.md  2026-03-05-task-triage-v2.md  2026-03-05-vibefairy-task-triage-v2.md  2026-03-05-vibefairy-v2-architecture.md  2026-03-07-codex-review-dual-plan.md  2026-03-08-rate-limit-resilience.md  INDEX.md
scripts/: install_service.ps1  start.bat  start.sh
src/claudefairy/: __init__.py  __main__.py  daemon.py
src/claudefairy/agents/: advisor.py  analyst.py  runner.py  scout.py  triage.py
src/claudefairy/comms/: telegram_bot.py
src/claudefairy/config/: loader.py
src/claudefairy/engine/: __init__.py  claude_session.py  policy.py  scheduler.py  worker.py
src/claudefairy/memory/: __init__.py  db.py  models.py  repo.py
src/vibefairy/: __init__.py  __main__.py  daemon.py
src/vibefairy/agents/: __init__.py  advisor.py  analyst.py  plan_reviewer.py  runner.py  scout.py  triage.py
src/vibefairy/comms/: __init__.py  telegram_bot.py
src/vibefairy/config/: __init__.py  loader.py  secrets.py
src/vibefairy/engine/: auth_manager.py  claude_plan_mode.py  claude_session.py  cli_backend.py  codex_session.py  dual_plan_orchestrator.py  model_session.py  policy.py  resilience.py  session_manager.py  worker.py
src/vibefairy/memory/: db.py  models.py  repo.py
tests/: test_claude_session.py  test_config_loader_models.py  test_model_session.py  test_resilience.py  test_worker_retry.py
